<resources>
    <string name="app_name">ReetuC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
  <string name="api_key">AIzaSyD79KLy_7LfEkEVEBDyNGbsrA-lJafeTiM</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="radio_male">Male</string>
  <string name="radio_female">Female</string>
  <string name="set_time">Set Birth Time</string>
  <string name="set_date">Set Birth Date</string>
</resources>
