<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"

  android:id="@+id/activity_profile"

  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".fragments.FirstFragment">

  <View
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginBottom="50dp"
     />

  <ScrollView
    android:layout_above="@+id/button_first"
    android:id="@+id/scrolView_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
      android:id="@+id/linear_account"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="100dp"
          android:layout_marginRight="10dp"
          android:orientation="vertical">

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Simple Name"
            android:textStyle="bold" />

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <EditText
              android:id="@+id/userName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="Please Enter  Name"
              android:imeOptions="actionNext"
              android:textColorHint="@color/colorPrimary" />

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <EditText
              android:id="@+id/email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="Email"
              android:imeOptions="actionNext"
              android:inputType="textEmailAddress"
              android:textColorHint="@color/colorPrimary" />

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneLayout"
            android:textColorHint="@color/colorPrimary">

            <EditText
              android:id="@+id/phone"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="Phone"
              android:imeOptions="actionNext"
              android:inputType="phone"
              android:textColorHint="@color/colorPrimary" />

          </com.google.android.material.textfield.TextInputLayout>

          <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
              android:id="@+id/radioMale"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/radio_male" />

            <RadioButton
              android:id="@+id/radioFemale"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/radio_female" />

          </RadioGroup>

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
              android:id="@+id/set_date"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/set_date" />

            <Button
              android:id="@+id/set_time"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/set_time" />


          </LinearLayout>

          <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/locationLayout"
            android:textColorHint="@color/colorPrimary">

            <AutoCompleteTextView
              android:id="@+id/location"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="Location in Bihar"
              android:imeOptions="actionNext"
              android:inputType="text"

              android:textColorHint="@color/colorPrimary" />

          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <EditText
              android:id="@+id/password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="password"
              android:imeOptions="actionNext"
              android:inputType="textPassword"
              android:textColorHint="@color/colorPrimary" />

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordConfirmLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <EditText
              android:id="@+id/passwordConfirm"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint=" Confirm password"
              android:imeOptions="actionNext"
              android:inputType="textPassword"
              android:textColorHint="@color/colorPrimary" />

          </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
      </LinearLayout>

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/fab_margin">

        <ImageView
          android:id="@+id/imageview_account_profile"
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:src="@mipmap/ic_launcher" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/floatingActionButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignEnd="@+id/imageview_account_profile"
          android:layout_alignRight="@+id/imageview_account_profile"
          android:layout_alignParentTop="true"
          android:layout_marginTop="10dp"
          app:srcCompat="@android:drawable/ic_menu_edit" />

      </RelativeLayout>


    </RelativeLayout>
  </ScrollView>

  <Button

    android:id="@+id/button_first"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:text="@string/next"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent" />
</RelativeLayout>




